fix mobile view overflow: round 2

--- a/css/faq.css
+++ b/css/faq.css
@@ -8,6 +8,7 @@
 }
 .faq-container h1, h2 {
   font-weight: 100;
+  width: 100%;
 }
 .faq-wrapper {
   text-align: center;
